src/test/ui/generator/auto-trait-regions.stderr
error: implementation of `Foo` is not general enough
  --> $DIR/auto-trait-regions.rs:31:5
   |
LL |     assert_foo(gen);
   |     ^^^^^^^^^^ implementation of `Foo` is not general enough
   |
   = note: `&'0 OnlyFooIfStaticRef` must implement `Foo`, for any lifetime `'0`...
   = note: ...but `Foo` is actually implemented for the type `&'static OnlyFooIfStaticRef`

error: implementation of `Foo` is not general enough
  --> $DIR/auto-trait-regions.rs:31:5
   |
LL |     assert_foo(gen);
   |     ^^^^^^^^^^ implementation of `Foo` is not general enough
   |
   = note: `&'0 OnlyFooIfStaticRef` must implement `Foo`, for any lifetime `'0`...
   = note: ...but `Foo` is actually implemented for the type `&'static OnlyFooIfStaticRef`

error: implementation of `Foo` is not general enough
  --> $DIR/auto-trait-regions.rs:50:5
   |
LL |     assert_foo(gen);
   |     ^^^^^^^^^^ implementation of `Foo` is not general enough
   |
   = note: `Foo` would have to be implemented for the type `A<'0, '1>`, for any two lifetimes `'0` and `'1`...
   = note: ...but `Foo` is actually implemented for the type `A<'_, '2>`, for some specific lifetime `'2`

error: implementation of `Foo` is not general enough
  --> $DIR/auto-trait-regions.rs:50:5
   |
LL |     assert_foo(gen);
   |     ^^^^^^^^^^ implementation of `Foo` is not general enough
   |
   = note: `Foo` would have to be implemented for the type `A<'0, '1>`, for any two lifetimes `'0` and `'1`...
   = note: ...but `Foo` is actually implemented for the type `A<'_, '2>`, for some specific lifetime `'2`

error: aborting due to 4 previous errors

